# bs-bingo

./: .gitignore  DEPLOY.md  README.md
server/: .env.example  Dockerfile  bingo.py  bot.md  bot.py  models.py  pcc-deploy.toml  pyproject.toml  utils.py  voices.json  words.json
